--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,7 +10,7 @@
     {
       "binding": "DB",
       "database_name": "dafuqbro-blog",
-      "database_id": "REPLACE_WITH_YOUR_D1_ID"
+      "database_id": "0fc4fe99-9026-4abe-aacd-fc7477590485"
     }
   ],
   "vars": {
